fix updateScroller overlap

--- a/styles/components/Navbar.module.scss
+++ b/styles/components/Navbar.module.scss
@@ -239,6 +239,12 @@
   }
 }
 
+
+.navbar_layout {
+  display: grid;
+  grid-template-rows: auto auto;
+}
+
 .nav_menu {
   position: fixed;
   opacity: 0;
