--- a/styles/pages/About.module.scss
+++ b/styles/pages/About.module.scss
@@ -2,6 +2,7 @@
     color: var(--text-alt);
     text-align: center;
     margin: 4rem 0;
+    margin-top: 0;
 
     .about_us {
         padding: 0 10%;
